# stressed_emotion

./: .gitignore  README.md  Untitled.ipynb  audio_branch.ipynb  brandon_model_architectures.ipynb  dataloader.ipynb  datasets.py  embedding_network.ipynb  extact_audio_features.ipynb  extract_audio_features.ipynb  extract_lexical_features.ipynb  models.ipynb  pyproject.toml  sampler.py  test_cuda.ipynb
code/: dataloader.ipynb  datasets.py  models.ipynb
feature_extraction/: extract_lexical_features.ipynb
yufeng_code/: datasets.py  earlystopping.py  models.py  train_baseline.py
