[tool.poetry]
name = "stressed_emotion"
version = "0.1.0"
description = ""
authors = ["Brandon Thai Tran <xbrandonthaitran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.2.0"
jupyterlab = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
